# 5GSmartCar

./: .gitignore  CMakeLists.txt  README.md  backup.md  line_detect  line_detect.cpp  motor_ctrl  motor_ctrl.cpp  motor_ctrl.py  motor_ctrl_v2  motor_ctrl_v2.cpp  test  test.cpp
config/: configs.yaml
debug/: hsv_tuning  hsv_tuning.cpp  tesseract-ocr  tesseract-ocr.cpp
include/: Controller.hpp  Detector.hpp  LetterClassificator.hpp  LetterOCR.hpp  Line.hpp  LineDetector.hpp  Logger.hpp  RealTimeVideoCapture.hpp  Struct.hpp  VideoProcessor.hpp  VideoRecorder.hpp
medias/: arrow2.avi  output238.avi  output8.avi
models/: arrow_model.onnx
other/: cam_test  cam_test.cpp  hsv_tuning  hsv_tuning.cpp  pulse  pulse.cpp  pwm_finder  pwm_finder.cpp
scripts/: move.py
src/: Controller.cpp  Detector.cpp  LineDetector.cpp  VideoProcessor.cpp  line_detect.cpp  main.cpp
